apps/talos/arrs/jellyseerr-deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  selector:
    matchLabels:
      app: jellyseerr
  template:
    spec:
      containers:
      - name: jellyseerr
        volumeMounts:
        - mountPath: /app/config
          name: jellyseerr-config
      volumes:
      - name: jellyseerr-config
        persistentVolumeClaim:
          claimName: jellyseerr-config
