apps/talos/arrs/radarr-deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  template:
    spec:
      containers:
      - name: radarr
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /config
          name: radarr-config
      volumes:
      - name: media
        nfs:
          path: /media/
          server: 192.168.1.188
      - name: radarr-config
        persistentVolumeClaim:
          claimName: radarr-config
