apps/talos/arrs/readarr-deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
spec:
  selector:
    matchLabels:
      app: readarr
  template:
    spec:
      containers:
      - name: readarr
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /config
          name: readarr-config
      volumes:
      - name: media
        nfs:
          path: /media/
          server: 10.240.1.43
      - name: readarr-config
        persistentVolumeClaim:
          claimName: readarr-config
