apps/talos/arrs/sonarr-deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    spec:
      containers:
      - name: sonarr
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /config
          name: sonarr-config
      volumes:
      - name: media
        nfs:
          path: /media/
          server: 192.168.1.188
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config
