apps/talos/arrs/autobrr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autobrr
spec:
  defaultBackend:
    service:
      name: autobrr
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - autobrr
