apps/talos/arrs/jellyseerr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  tailscale.com/tags: "tag:k8s,tag:internal"
spec:
  defaultBackend:
    service:
      name: jellyseerr
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyseerr
