apps/talos/arrs/radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  defaultBackend:
    service:
      name: radarr
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - radarr
