apps/talos/arrs/readarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
spec:
  defaultBackend:
    service:
      name: readarr
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - readarr
