apps/talos/arrs/sonarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  defaultBackend:
    service:
      name: sonarr
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - sonarr
